force-app/main/default/objects/Ownership_Change_Request__c/Ownership_Change_Request__c.object-meta.xml
<CustomObject>
    <label>Ownership Change Request</label>
    <nameField>
        <displayFormat>OCR-{000000}</displayFormat>
        <label>Ownership Change Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ownership Change Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>