force-app/main/default/objects/Ownership_Change_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ownership Change Requests</relationshipLabel>
    <relationshipName>Ownership_Change_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>  
</CustomField>