force-app/main/default/objects/Ownership_Change_Request__c/fields/Account_Operating_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Operating_Segment__c</fullName>
    <formula>Text(Account__r.Primary_Service_Provider_New__c)</formula>
    <inlineHelpText>Current Operating Segment on the account.</inlineHelpText>
    <label>Account Operating Segment</label>
    <type>Text</type>
</CustomField> 