force-app/main/default/objects/Ownership_Change_Request__c/fields/Account_Operating_Segment_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Operating_Segment_Text__c</fullName>
    <label>Account Operating Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>