force-app/main/default/objects/Ownership_Change_Request__c/fields/Account_Owner_del__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ownership_Change_Requests_del</relationshipName>
    <type>Lookup</type>
</CustomField>
 