force-app/main/default/objects/Ownership_Change_Request__c/fields/Account_Owner_Managers_Same__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Managers_Same__c</fullName>
    <formula>New_Owner_s_Manager__c = Existing_Owner_s_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Managers Same</label>
    <type>Checkbox</type>
</CustomField>  