force-app/main/default/objects/Ownership_Change_Request__c/fields/Account_Owner_SVP__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_SVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner SVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ownership_Change_RequestSVP</relationshipName>
    <type>Lookup</type>
</CustomField> 