force-app/main/default/objects/Ownership_Change_Request__c/fields/Account_Primary_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Account_Primary_Service_Provider__c</fullName>
    <formula>Text(Account__r.Primary_Business__c)</formula>
    <inlineHelpText>Current Primary Service Provider on the account.</inlineHelpText>
    <label>Account Primary Service Provider</label>
    <type>Text</type>
</CustomField> 