force-app/main/default/objects/Ownership_Change_Request__c/fields/Account_Primary_Service_Provider_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Primary_Service_Provider_Text__c</fullName>
    <label>Account Primary Service Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>