force-app/main/default/objects/Ownership_Change_Request__c/fields/Account_Win_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Win_Id__c</fullName>
    <description>It displays the Account win id.</description>
    <formula>Account__r.WIN_ID__c</formula>
    <label>Account Win Id</label>
    <type>Text</type>
</CustomField>