force-app/main/default/objects/Ownership_Change_Request__c/fields/Current_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_Account_Owner__c</fullName>
    <description>This field is used for the Items to Approve unmanaged package and is intentionally left off of the layout</description>
    <formula>Account_Owner_del__r.FirstName &amp;&quot; &quot;&amp;  Account_Owner_del__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Account Owner</label>
    <type>Text</type>
</CustomField>
 