force-app/main/default/objects/Ownership_Change_Request__c/fields/Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage__c</fullName>
    <label>Current Stage</label>
    <precision>18</precision>
    <scale>0</scale> 
    <type>Number</type>
</CustomField>