force-app/main/default/objects/Ownership_Change_Request__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>    
    <formula>IF(Intra_Quarter_Flip__c,
TODAY(),
IF(EligibileForIntraQuarterFlip__c &amp;&amp; ISPICKVAL(Account_Owner_del__r.Sales_Person_Type__c, &apos;Sales Placeholder&apos;),
NULL,
IF(Month(DATEVALUE(CreatedDate)) =1, DATE(YEAR(DATEVALUE(CreatedDate)) , 04 , 01), 
IF(Month(DATEVALUE(CreatedDate)) =2, DATE(YEAR(DATEVALUE(CreatedDate)) , 04 , 01),
IF(Month(DATEVALUE(CreatedDate)) =3, if((DAY(DATEVALUE(CreatedDate))&gt;= 25),DATE(YEAR(DATEVALUE(CreatedDate)) , 07 , 01),DATE(YEAR(DATEVALUE(CreatedDate)) , 04 , 01)),
IF(Month(DATEVALUE(CreatedDate)) =4, DATE(YEAR(DATEVALUE(CreatedDate)) , 07 , 01), 
IF(Month(DATEVALUE(CreatedDate)) =5, DATE(YEAR(DATEVALUE(CreatedDate)) , 07 , 01), 
IF(Month(DATEVALUE(CreatedDate)) =6, if((DAY(DATEVALUE(CreatedDate))&gt;= 24),DATE(YEAR(DATEVALUE(CreatedDate)) , 10 , 01),DATE(YEAR(DATEVALUE(CreatedDate)) , 07 , 01)),
IF(Month(DATEVALUE(CreatedDate)) =7, DATE(YEAR(DATEVALUE(CreatedDate)) , 10 , 01), 
IF(Month(DATEVALUE(CreatedDate)) =8, DATE(YEAR(DATEVALUE(CreatedDate)) , 10 , 01), 
IF(Month(DATEVALUE(CreatedDate)) =9, if((DAY(DATEVALUE(CreatedDate))&gt;= 24),DATE(YEAR(DATEVALUE(CreatedDate))+1 , 01 , 01),DATE(YEAR(DATEVALUE(CreatedDate)) , 10 , 01)),
IF(Month(DATEVALUE(CreatedDate)) =10, DATE(YEAR(DATEVALUE(CreatedDate))+1 , 01 , 01), 
IF(Month(DATEVALUE(CreatedDate)) =11, DATE(YEAR(DATEVALUE(CreatedDate))+1 , 01 , 01), 
IF(DAY(DATEVALUE(CreatedDate))&gt;= 25,DATE(YEAR(DATEVALUE(CreatedDate))+1 , 04 , 01),DATE(YEAR(DATEVALUE(CreatedDate))+1 , 01 , 01)))))))))))))))</formula>
    <inlineHelpText>This field is auto populated to the first day of the next quarter. Unless submitted in the final week of the current quarter.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>