force-app/main/default/objects/Ownership_Change_Request__c/fields/EligibileForIntraQuarterFlip__c.field-meta.xml
<CustomField>
    <fullName>EligibileForIntraQuarterFlip__c</fullName> 
    <defaultValue>false</defaultValue>
    <label>Eligibile Intra Quarter Flip</label> 
    <type>Checkbox</type>
</CustomField>