force-app/main/default/objects/Ownership_Change_Request__c/fields/Intra_Quarter_Flip__c.field-meta.xml
<CustomField>
    <fullName>Intra_Quarter_Flip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intra-Quarter Flip</label>
    <type>Checkbox</type>
</CustomField>