force-app/main/default/objects/Ownership_Change_Request__c/fields/IS_Am_Flag__c.field-meta.xml
<CustomField>
    <fullName>IS_Am_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS Am Flag</label>
    <type>Checkbox</type>
</CustomField> 