force-app/main/default/objects/Ownership_Change_Request__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <inlineHelpText>Provide any additional information on this particular change request.</inlineHelpText>
    <label>Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>
 