force-app/main/default/objects/Ownership_Change_Request__c/fields/Need_Existing_Manager_Approval__c.field-meta.xml
<CustomField>
    <fullName>Need_Existing_Manager_Approval__c</fullName>
    <formula>AND(NOT(ISPICKVAL(Account__r.Primary_Business__c,&quot;&quot;)), New_Owner_s_Manager__c &lt;&gt;  Existing_Owner_s_Manager__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Need Existing Manager Approval</label>
    <type>Checkbox</type>
</CustomField>