force-app/main/default/objects/Ownership_Change_Request__c/fields/New_Operating_Segment__c.field-meta.xml
<CustomField>
    <fullName>New_Operating_Segment__c</fullName>
    <inlineHelpText>The operating segment that will be populated on the account if approved. This is determined by the requested owner&apos;s primary business.</inlineHelpText>
    <label>Requested Operating Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SK ENV</fullName>
            </value>
            <value>
                <fullName>SK BPS</fullName>
            </value>
            <value>
                <fullName>SK KPP</fullName>
            </value>
            <value>
                <fullName>Clean Harbors ENV</fullName>
            </value>
            <value>
                <fullName>CHES Oil and Gas</fullName>
            </value>
            <value>
                <fullName>CHES Industrial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>
   