force-app/main/default/objects/Ownership_Change_Request__c/fields/New_Owner__c.field-meta.xml
<CustomField>
    <fullName>New_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the owner that is being requested for the account ownership change</description>
    <inlineHelpText>If approved, the user that will become the owner of the account.</inlineHelpText>
    <label>Requested Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Ownership_Change_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>
  