force-app/main/default/objects/Ownership_Change_Request__c/fields/New_Owner_s_VP__c.field-meta.xml
<CustomField>
    <fullName>New_Owner_s_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Owner’s VP</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Ownership_Change_Requests4</relationshipName>
    <type>Lookup</type>
</CustomField>
 