force-app/main/default/objects/Ownership_Change_Request__c/fields/New_Primary_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>New_Primary_Service_Provider__c</fullName>
    <inlineHelpText>The primary service provider that will be populated on the account if approved. This is determined by the requested owner&apos;s primary business. Please confirm that this value is correct before submitting the request for approval.</inlineHelpText>
    <label>Requested Primary Service Provider</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>New_Operating_Segment__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Daylighting Services</fullName>
            </value>
            <value>
                <fullName>Emerald Services</fullName>
            </value>
            <value>
                <fullName>Field Services</fullName>
            </value>
            <value>
                <fullName>Healthcare Services</fullName>
            </value>
            <value>
                <fullName>Industrial Services</fullName>
            </value>
            <value>
                <fullName>Lodging</fullName>
            </value>
            <value>
                <fullName>Murphys Oil</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Technical Services</fullName>
            </value>
            <value>
                <fullName>Thermo Fluids</fullName>
            </value>
            <value>
                <fullName>H2O</fullName>
            </value>
            <value>
                <fullName>BPS</fullName>
            </value>
            <value>
                <fullName>CYN</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>SK KPP</fullName>
            </value>
            <value>
                <fullName>Surface Rentals</fullName>
            </value>
            <value>
                <fullName>Seismic</fullName>
            </value>
            <value>
                <fullName>SK ENV</fullName>
            </value>
            <value>
                <fullName>OER</fullName>
            </value>
            <value>
                <fullName>HPC Industrial</fullName>
            </value>
            <value>
                <fullName>PSC</fullName>
            </value>
            <value>
                <fullName>Synergy</fullName>
            </value>
			<value>
                <fullName>Thompson</fullName>
            </value>
			<value>
                <fullName>Noble Oil</fullName>
            </value>
            <value>
                <fullName>HEPACO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>  