force-app/main/default/objects/Ownership_Change_Request__c/fields/Next_Approver__c.field-meta.xml
<CustomField>
    <fullName>Next_Approver__c</fullName> 
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ownership_Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>