force-app/main/default/objects/Ownership_Change_Request__c/fields/Prior_year_s_revenue__c.field-meta.xml
<CustomField>
    <fullName>Prior_year_s_revenue__c</fullName>
    <label>Prior year&apos;s revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>
 