force-app/main/default/objects/Ownership_Change_Request__c/fields/Reason_for_Change__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Change__c</fullName>
    <inlineHelpText>Please indicate the reason this account needs to change ownership.</inlineHelpText>
    <label>Reason for Change</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Request / Customer Relationship</fullName>
            </value>
            <value>
                <fullName>Primary Business Change</fullName>
            </value>
            <value>
                <fullName>Field and Inside Sales Transition</fullName>
            </value>
            <value>
                <fullName>Unmanaged Account</fullName>
            </value>
            <value>
                <fullName>New Business / Upcoming Work</fullName>
            </value>
            <value>
                <fullName>Territory Alignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>
 