force-app/main/default/objects/Ownership_Change_Request__c/fields/Requested_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Requested_Account_Owner__c</fullName>
    <description>This field is used for the Items to Approve unmanaged package and is intentionally left off of the layout</description>
    <formula>New_Owner__r.FirstName &amp;&quot; &quot;&amp; New_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Account Owner</label>
    <type>Text</type>
</CustomField> 