force-app/main/default/objects/Ownership_Change_Request__c/fields/Requested_Owner_Territory_Id__c.field-meta.xml
<CustomField>
    <fullName>Requested_Owner_Territory_Id__c</fullName>
    <label>Requested Owner Territory Id</label>
    <length>255</length>
    <type>Text</type> 
</CustomField> 