force-app/main/default/objects/Ownership_Change_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet> 
        <restricted>true</restricted>
        <valueSetDefinition>
            <value> 
                <fullName>New</fullName>
            </value>
            <value> 
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved-Pending</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value> 
            <value>
                <fullName>Executed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
			<value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>