force-app/main/default/objects/Ownership_Change_Request__c/fields/To_Be_Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>To_Be_Territory_ID__c</fullName>
    <label>To-Be Territory ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 