force-app/main/default/objects/Ownership_Change_Request__c/recordTypes/Owner_Change.recordType-meta.xml
<RecordType>
    <fullName>Owner_Change</fullName>
    <active>true</active>
    <description>Owner Change request</description>
    <label>Owner Change</label>
</RecordType>