force-app/main/default/objects/Ownership_Change_Request__c/validationRules/Account_Operating_Segment_SKE_ENV.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Operating_Segment_SKE_ENV</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL( Account__r.Primary_Service_Provider_New__c , &quot;SK ENV&quot;),
	OR( ISPICKVAL( New_Operating_Segment__c , &quot;Clean Harbors ENV&quot;),
	ISPICKVAL( New_Operating_Segment__c , &quot;CHES Oil and Gas&quot;),
	ISPICKVAL( New_Operating_Segment__c , &quot;CHES Industrial&quot;))
	)</errorConditionFormula>
    <errorMessage>SKE Accounts cannot be transitioned to CHES without explicit approval from the SKE Business Leaders</errorMessage>
</ValidationRule>  