force-app/main/default/objects/Ownership_Change_Request__c/validationRules/Account_Owner_Event_Sales_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Owner_Event_Sales_Check</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT($Profile.Name = &apos;System Administrator&apos;),
    OR(
    Account__r.Account_Owner_Name__c = &apos;EVENT SALES CAN&apos;,
    Account__r.Account_Owner_Name__c = &apos;EVENT SALES US&apos;))</errorConditionFormula>
    <errorMessage>Please Contact your Business Partner for Help Moving this Account.</errorMessage>
</ValidationRule>