force-app/main/default/objects/Ownership_Change_Request__c/validationRules/Account_Owner_SK11_SALES_SK.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Owner_SK11_SALES_SK</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT($Profile.Name = &apos;System Administrator&apos;),
    Account__r.Account_Owner_Name__c = &quot;SK11 SALES SK&quot;)</errorConditionFormula>
    <errorMessage>Stewardship Accounts cannot be re-assigned</errorMessage>
</ValidationRule>