force-app/main/default/objects/Ownership_Change_Request__c/validationRules/Archived_Account_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Archived_Account_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  
    NOT($Profile.Name = &apos;System Administrator&apos;),Account__r.Expired__c)</errorConditionFormula>
    <errorMessage>Archived Accounts Cannot be Re-Assigned. Please Create a New Account.</errorMessage>
</ValidationRule>