force-app/main/default/objects/Ownership_Change_Request__c/validationRules/Inactive_Account_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactive_Account_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
    NOT($Profile.Name = &apos;System Administrator&apos;),
    ISPICKVAL(Account__r.Status__c , &quot;Inactive&quot;))</errorConditionFormula>
    <errorMessage>Inactive Accounts Cannot be Re-Assigned. Please Reactivate the Account.</errorMessage>
</ValidationRule>
 