force-app/main/default/objects/Ownership_Change_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Account__c</columns>
    <columns>Account_Operating_Segment__c</columns>
    <columns>Status__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Justification__c</columns>
    <columns>New_Operating_Segment__c</columns>
    <columns>New_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label> 
</ListView>